2011-04-28  Mark Pilgrim  <pilgrim@chromium.org>

Reviewed by Tony Chang.

        IndexedDB createIndex should fail if name arg is null
        https://bugs.webkit.org/show_bug.cgi?id=58365

        * storage/indexeddb/mozilla/create-index-null-name-expected.txt: Added.
        * storage/indexeddb/mozilla/create-index-null-name.html: Added.
2011-04-28  Mark Pilgrim  <pilgrim@chromium.org>

        Reviewed by Tony Chang.

        IndexedDB createIndex should fail if name arg is null
        https://bugs.webkit.org/show_bug.cgi?id=58365

        Test: storage/indexeddb/mozilla/create-index-null-name.html

        * storage/IDBObjectStore.idl:
        * storage/IDBObjectStoreBackendImpl.cpp:
        (WebCore::IDBObjectStoreBackendImpl::createIndex):

Canonical link: https://commits.webkit.org/74949@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@85238 268f45cc-cd09-0410-ab3c-d52691b4dbfc